<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="51dp"
        android:text="LIQUIDACION"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#008000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="100dp" />

    <TextView
        android:id="@+id/Nom2"
        android:layout_width="93dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="144dp"
        android:layout_marginTop="173dp"
        android:text="@string/nombres2"
        tools:text="nombre" />

    <TextView
        android:id="@+id/Apell2"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="211dp"
        android:text="@string/apellidos2"
        tools:text="apellidos" />

    <TextView
        android:id="@+id/Carg2"
        android:layout_width="102dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="250dp"
        android:text="@string/cargo2" />

    <TextView
        android:id="@+id/Sueldo2"
        android:layout_width="110dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="135dp"
        android:layout_marginTop="284dp"
        android:text="@string/SueldoB2"
        tools:text="sueldo" />

    <TextView
        android:id="@+id/Diaslb2"
        android:layout_width="105dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="138dp"
        android:layout_marginTop="326dp"
        android:text="@string/DiasL2"
        tools:text="dias lab" />

    <TextView
        android:id="@+id/Subtotal"
        android:layout_width="102dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="136dp"
        android:layout_marginBottom="267dp"
        android:text="TextView" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="152dp"
        android:layout_marginBottom="189dp"
        android:onClick="Salir"
        android:text="@string/BotonSalir" />

    <TextView
        android:id="@+id/ValorDia"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="136dp"
        android:layout_marginBottom="322dp"
        android:text="TextView" />

</RelativeLayout>