<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <EditText
        android:id="@+id/Nom1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="118dp"
        android:layout_marginTop="230dp"
        android:ems="10"
        android:hint="@string/nombres"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/Apell1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883" />

    <EditText
        android:id="@+id/Apell1"
        android:layout_width="206dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="118dp"
        android:layout_marginBottom="555dp"
        android:ems="10"
        android:hint="@string/apellidos"
        android:inputType="text"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="208dp" />

    <EditText
        android:id="@+id/Carg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="368dp"
        android:layout_marginEnd="85dp"
        android:ems="10"
        android:hint="@string/cargo"
        android:inputType="text"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="343dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="91dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="253dp"
        android:text="Nombres"
        android:textColor="#FF0000"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="159dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="94dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="320dp"
        android:text="Apellidos"
        android:textColor="#FF0000"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="227dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="89dp"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="379dp"
        android:text="Cargo"
        android:textColor="#FF0000"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="292dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="85dp"
        android:layout_height="23dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="433dp"
        android:text="Sueldo Base"
        android:textColor="#FF0000"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="360dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="81dp"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="498dp"
        android:text="Dias Lab"
        android:textColor="#FF0000"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="432dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="207dp"
        android:layout_height="41dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="92dp"
        android:text="Segunda Actividad"
        android:textColor="#FF0000"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="78dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="67dp"
        android:layout_marginBottom="67dp"
        android:onClick="Regresar"
        android:text="Regresar" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="65dp"
        android:onClick="Liquidar"
        android:text="@string/BotonEnviar" />

    <CheckBox
        android:id="@+id/Descuento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="275dp"
        android:text="Descuento" />

    <CheckBox
        android:id="@+id/Salud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="126dp"
        android:layout_marginBottom="283dp"
        android:text="Salud" />

    <CheckBox
        android:id="@+id/Pension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="345dp"
        android:text="Pension" />

    <EditText
        android:id="@+id/Diaslb1"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="121dp"
        android:layout_marginBottom="359dp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/Sueldo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="118dp"
        android:layout_marginBottom="422dp"
        android:ems="10"
        android:hint="@string/SueldoB"
        android:inputType="number" />
</RelativeLayout>